--- a/HW02/HW02-1.ipynb
+++ b/HW02/HW02-1.ipynb
@@ -79,14 +79,14 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "OzkiMEcC3Foq",
-        "outputId": "7d993a40-99d5-46cb-8db3-e368cb652201"
+        "outputId": "6389ba6c-a9e8-453e-ae1a-6e4b5988ae1e"
       },
       "source": [
         "!gdown --id '1HPkcmQmFGu-3OknddKIa5dNDsR05lIQR' --output data.zip\n",
         "!unzip data.zip\n",
         "!ls"
       ],
-      "execution_count": 1,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "stream",
@@ -96,9 +96,9 @@
             "  warnings.warn(\n",
             "Downloading...\n",
             "From (original): https://drive.google.com/uc?id=1HPkcmQmFGu-3OknddKIa5dNDsR05lIQR\n",
-            "From (redirected): https://drive.google.com/uc?id=1HPkcmQmFGu-3OknddKIa5dNDsR05lIQR&confirm=t&uuid=9121673b-93e6-4e57-bdfb-bfe23e5a5716\n",
+            "From (redirected): https://drive.google.com/uc?id=1HPkcmQmFGu-3OknddKIa5dNDsR05lIQR&confirm=t&uuid=007bdcef-3bf1-4275-b10c-d69808f99216\n",
             "To: /content/data.zip\n",
-            "100% 372M/372M [00:06<00:00, 57.6MB/s]\n",
+            "100% 372M/372M [00:06<00:00, 54.5MB/s]\n",
             "Archive:  data.zip\n",
             "   creating: timit_11/\n",
             "  inflating: timit_11/train_11.npy   \n",
@@ -126,7 +126,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "IJjLT8em-y9G",
-        "outputId": "aad29963-e165-4750-ec9c-1cf8872cddee"
+        "outputId": "5887ce07-e481-4b80-df8c-81a23a6acb72"
       },
       "source": [
         "import numpy as np\n",
@@ -141,7 +141,7 @@
         "print('Size of training data: {}'.format(train.shape))\n",
         "print('Size of testing data: {}'.format(test.shape))"
       ],
-      "execution_count": 2,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "stream",
@@ -176,7 +176,7 @@
         "    def __init__(self, X, y=None):\n",
         "        self.data = torch.from_numpy(X).float()\n",
         "        if y is not None:\n",
-        "            y = y.astype(np.int)\n",
+        "            y = y.astype(int)\n",
         "            self.label = torch.LongTensor(y)\n",
         "        else:\n",
         "            self.label = None\n",
@@ -190,7 +190,7 @@
         "    def __len__(self):\n",
         "        return len(self.data)\n"
       ],
-      "execution_count": 3,
+      "execution_count": 5,
       "outputs": []
     },
     {
@@ -209,7 +209,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "sYqi_lAuvC59",
-        "outputId": "47f3421e-17f6-4e36-bffe-f5584ef73632"
+        "outputId": "ef1b6d36-b208-415b-db66-78088e759884"
       },
       "source": [
         "VAL_RATIO = 0.2\n",
@@ -219,7 +219,7 @@
         "print('Size of training set: {}'.format(train_x.shape))\n",
         "print('Size of validation set: {}'.format(val_x.shape))"
       ],
-      "execution_count": 4,
+      "execution_count": 8,
       "outputs": [
         {
           "output_type": "stream",
@@ -243,12 +243,7 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "RUCbQvqJurYc",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 418
-        },
-        "outputId": "ed783447-0d9e-44e5-d7ba-5db1290af9f5"
+        "id": "RUCbQvqJurYc"
       },
       "source": [
         "BATCH_SIZE = 64\n",
@@ -260,22 +255,8 @@
         "train_loader = DataLoader(train_set, batch_size=BATCH_SIZE, shuffle=True) #only shuffle the training data\n",
         "val_loader = DataLoader(val_set, batch_size=BATCH_SIZE, shuffle=False)"
       ],
-      "execution_count": 5,
-      "outputs": [
-        {
-          "output_type": "error",
-          "ename": "AttributeError",
-          "evalue": "module 'numpy' has no attribute 'int'.\n`np.int` was a deprecated alias for the builtin `int`. To avoid this error in existing code, use `int` by itself. Doing this will not modify any behavior and is safe. When replacing `np.int`, you may wish to use e.g. `np.int64` or `np.int32` to specify the precision. If you wish to review your current use, check the release note link for additional information.\nThe aliases was originally deprecated in NumPy 1.20; for more details and guidance see the original release note at:\n    https://numpy.org/devdocs/release/1.20.0-notes.html#deprecations",
-          "traceback": [
-            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-            "\u001b[0;32m/tmp/ipython-input-1547003758.py\u001b[0m in \u001b[0;36m<cell line: 0>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0mtorch\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mutils\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdata\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mDataLoader\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 5\u001b[0;31m \u001b[0mtrain_set\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mTIMITDataset\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtrain_x\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtrain_y\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      6\u001b[0m \u001b[0mval_set\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mTIMITDataset\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mval_x\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mval_y\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      7\u001b[0m \u001b[0mtrain_loader\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mDataLoader\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtrain_set\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mbatch_size\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mBATCH_SIZE\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mshuffle\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mTrue\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;31m#only shuffle the training data\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;32m/tmp/ipython-input-348484277.py\u001b[0m in \u001b[0;36m__init__\u001b[0;34m(self, X, y)\u001b[0m\n\u001b[1;32m      6\u001b[0m         \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdata\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mtorch\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfrom_numpy\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mX\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfloat\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      7\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0my\u001b[0m \u001b[0;32mis\u001b[0m \u001b[0;32mnot\u001b[0m \u001b[0;32mNone\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 8\u001b[0;31m             \u001b[0my\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0my\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mastype\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mint\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      9\u001b[0m             \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mlabel\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mtorch\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mLongTensor\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0my\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     10\u001b[0m         \u001b[0;32melse\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;32m/usr/local/lib/python3.12/dist-packages/numpy/__init__.py\u001b[0m in \u001b[0;36m__getattr__\u001b[0;34m(attr)\u001b[0m\n\u001b[1;32m    392\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    393\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0mattr\u001b[0m \u001b[0;32min\u001b[0m \u001b[0m__former_attrs__\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 394\u001b[0;31m             \u001b[0;32mraise\u001b[0m \u001b[0mAttributeError\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0m__former_attrs__\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mattr\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    395\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    396\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0mattr\u001b[0m \u001b[0;32min\u001b[0m \u001b[0m__expired_attributes__\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;31mAttributeError\u001b[0m: module 'numpy' has no attribute 'int'.\n`np.int` was a deprecated alias for the builtin `int`. To avoid this error in existing code, use `int` by itself. Doing this will not modify any behavior and is safe. When replacing `np.int`, you may wish to use e.g. `np.int64` or `np.int32` to specify the precision. If you wish to review your current use, check the release note link for additional information.\nThe aliases was originally deprecated in NumPy 1.20; for more details and guidance see the original release note at:\n    https://numpy.org/devdocs/release/1.20.0-notes.html#deprecations"
-          ]
-        }
-      ]
+      "execution_count": 9,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -291,7 +272,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "y8rzkGraeYeN"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "y8rzkGraeYeN",
+        "outputId": "5abf28f9-7ac3-4d3c-abd9-08144fa00978"
       },
       "source": [
         "import gc\n",
@@ -299,8 +284,19 @@
         "del train, train_label, train_x, train_y, val_x, val_y\n",
         "gc.collect()"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 10,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "37"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 10
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -353,7 +349,7 @@
         "\n",
         "        return x"
       ],
-      "execution_count": null,
+      "execution_count": 11,
       "outputs": []
     },
     {
@@ -375,7 +371,7 @@
         "def get_device():\n",
         "  return 'cuda' if torch.cuda.is_available() else 'cpu'"
       ],
-      "execution_count": null,
+      "execution_count": 12,
       "outputs": []
     },
     {
@@ -403,7 +399,7 @@
         "    torch.backends.cudnn.benchmark = False\n",
         "    torch.backends.cudnn.deterministic = True"
       ],
-      "execution_count": null,
+      "execution_count": 13,
       "outputs": []
     },
     {
@@ -418,7 +414,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "QTp3ZXg1yO9Y"
+        "id": "QTp3ZXg1yO9Y",
+        "outputId": "98b0c57a-d98a-4915-d2b5-3d35d08664ac",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "source": [
         "# fix random seed for reproducibility\n",
@@ -440,13 +440,25 @@
         "criterion = nn.CrossEntropyLoss()\n",
         "optimizer = torch.optim.Adam(model.parameters(), lr=learning_rate)"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 14,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "DEVICE: cuda\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "CdMWsBs7zzNs"
+        "id": "CdMWsBs7zzNs",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "8e0fca5e-75e8-43ea-b233-56cb07e43551"
       },
       "source": [
         "# start training\n",
@@ -506,8 +518,46 @@
         "    torch.save(model.state_dict(), model_path)\n",
         "    print('saving model at last epoch')\n"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 15,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[001/020] Train Acc: 0.467302 Loss: 1.811661 | Val Acc: 0.567428 loss: 1.433065\n",
+            "saving model with acc 0.567\n",
+            "[002/020] Train Acc: 0.594383 Loss: 1.330665 | Val Acc: 0.628639 loss: 1.211098\n",
+            "saving model with acc 0.629\n",
+            "[003/020] Train Acc: 0.644506 Loss: 1.154064 | Val Acc: 0.660421 loss: 1.101215\n",
+            "saving model with acc 0.660\n",
+            "[004/020] Train Acc: 0.672216 Loss: 1.052246 | Val Acc: 0.676300 loss: 1.038718\n",
+            "saving model with acc 0.676\n",
+            "[005/020] Train Acc: 0.691347 Loss: 0.983103 | Val Acc: 0.685154 loss: 1.001852\n",
+            "saving model with acc 0.685\n",
+            "[006/020] Train Acc: 0.705615 Loss: 0.931955 | Val Acc: 0.689301 loss: 0.984177\n",
+            "saving model with acc 0.689\n",
+            "[007/020] Train Acc: 0.716344 Loss: 0.891687 | Val Acc: 0.694516 loss: 0.964627\n",
+            "saving model with acc 0.695\n",
+            "[008/020] Train Acc: 0.725881 Loss: 0.857907 | Val Acc: 0.697720 loss: 0.951889\n",
+            "saving model with acc 0.698\n",
+            "[009/020] Train Acc: 0.733717 Loss: 0.829495 | Val Acc: 0.696687 loss: 0.949866\n",
+            "[010/020] Train Acc: 0.741151 Loss: 0.803701 | Val Acc: 0.699374 loss: 0.944832\n",
+            "saving model with acc 0.699\n",
+            "[011/020] Train Acc: 0.748050 Loss: 0.781106 | Val Acc: 0.697773 loss: 0.946494\n",
+            "[012/020] Train Acc: 0.753792 Loss: 0.760380 | Val Acc: 0.702830 loss: 0.938236\n",
+            "saving model with acc 0.703\n",
+            "[013/020] Train Acc: 0.759404 Loss: 0.741234 | Val Acc: 0.700456 loss: 0.945627\n",
+            "[014/020] Train Acc: 0.764572 Loss: 0.723574 | Val Acc: 0.702159 loss: 0.942118\n",
+            "[015/020] Train Acc: 0.769470 Loss: 0.707325 | Val Acc: 0.704427 loss: 0.936154\n",
+            "saving model with acc 0.704\n",
+            "[016/020] Train Acc: 0.773689 Loss: 0.691314 | Val Acc: 0.701736 loss: 0.945713\n",
+            "[017/020] Train Acc: 0.778677 Loss: 0.676633 | Val Acc: 0.701586 loss: 0.953081\n",
+            "[018/020] Train Acc: 0.783105 Loss: 0.662425 | Val Acc: 0.699663 loss: 0.963290\n",
+            "[019/020] Train Acc: 0.786395 Loss: 0.649180 | Val Acc: 0.700078 loss: 0.957681\n",
+            "[020/020] Train Acc: 0.790644 Loss: 0.636623 | Val Acc: 0.699732 loss: 0.964269\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -530,7 +580,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "1PKjtAScPWtr"
+        "id": "1PKjtAScPWtr",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "98762087-c814-44e1-cecb-b76108801948"
       },
       "source": [
         "# create testing dataset\n",
@@ -541,8 +595,19 @@
         "model = Classifier().to(device)\n",
         "model.load_state_dict(torch.load(model_path))"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 16,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "<All keys matched successfully>"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 16
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -571,7 +636,7 @@
         "        for y in test_pred.cpu().numpy():\n",
         "            predict.append(y)"
       ],
-      "execution_count": null,
+      "execution_count": 17,
       "outputs": []
     },
     {
@@ -596,7 +661,7 @@
         "    for i, y in enumerate(predict):\n",
         "        f.write('{},{}\\n'.format(i, y))"
       ],
-      "execution_count": null,
+      "execution_count": 18,
       "outputs": []
     }
   ]
