使用 Colab 创建而成

--- a/HW03/HW03.ipynb
+++ b/HW03/HW03.ipynb
@@ -57199,12 +57199,9 @@
         "# Initialize optimizer\n",
         "optimizer = torch.optim.Adam(model.parameters(), lr=0.0003, weight_decay=1e-5)\n",
         "\n",
-        "# ---------- 实时绘图初始化 ----------\n",
+        "# ---------- 记录训练过程 ----------\n",
         "train_losses, valid_losses = [], []\n",
         "train_accs, valid_accs = [], []\n",
-        "\n",
-        "plt.ion()  # 开启交互模式\n",
-        "fig, axs = plt.subplots(1, 2, figsize=(12, 4))\n",
         "\n",
         "# The number of training epochs.\n",
         "n_epochs = 80\n",
@@ -57213,12 +57210,14 @@
         "do_semi = False\n",
         "\n",
         "for epoch in range(n_epochs):\n",
+        "\n",
         "    # ---------- Semi-supervised relabeling ----------\n",
         "    if do_semi:\n",
         "        pseudo_set = get_pseudo_labels(unlabeled_set, model)\n",
         "        concat_dataset = ConcatDataset([train_set, pseudo_set])\n",
         "        train_loader = DataLoader(\n",
-        "            concat_dataset, batch_size=batch_size, shuffle=True, num_workers=8, pin_memory=True\n",
+        "            concat_dataset, batch_size=batch_size,\n",
+        "            shuffle=True, num_workers=8, pin_memory=True\n",
         "        )\n",
         "\n",
         "    # ---------- Training ----------\n",
@@ -57228,21 +57227,26 @@
         "    for batch in tqdm(train_loader):\n",
         "        imgs, labels = batch\n",
         "\n",
-        "        logits = model(imgs.to(device))\n",
-        "        loss = criterion(logits, labels.to(device))\n",
+        "        imgs = imgs.to(device)\n",
+        "        labels = labels.to(device)\n",
+        "\n",
+        "        logits = model(imgs)\n",
+        "        loss = criterion(logits, labels)\n",
         "\n",
         "        optimizer.zero_grad()\n",
         "        loss.backward()\n",
         "        nn.utils.clip_grad_norm_(model.parameters(), max_norm=10)\n",
         "        optimizer.step()\n",
         "\n",
-        "        acc = (logits.argmax(dim=-1) == labels.to(device)).float().mean()\n",
+        "        acc = (logits.argmax(dim=-1) == labels).float().mean()\n",
+        "\n",
         "        train_loss_list.append(loss.item())\n",
         "        train_acc_list.append(acc.item())\n",
         "\n",
         "    train_loss = sum(train_loss_list) / len(train_loss_list)\n",
         "    train_acc = sum(train_acc_list) / len(train_acc_list)\n",
-        "    print(f\"[ Train | {epoch + 1:03d}/{n_epochs:03d} ] loss = {train_loss:.5f}, acc = {train_acc:.5f}\")\n",
+        "\n",
+        "    print(f\"[ Train | {epoch+1:03d}/{n_epochs:03d} ] loss = {train_loss:.5f}, acc = {train_acc:.5f}\")\n",
         "\n",
         "    # ---------- Validation ----------\n",
         "    model.eval()\n",
@@ -57250,50 +57254,56 @@
         "\n",
         "    for batch in tqdm(valid_loader):\n",
         "        imgs, labels = batch\n",
+        "\n",
+        "        imgs = imgs.to(device)\n",
+        "        labels = labels.to(device)\n",
+        "\n",
         "        with torch.no_grad():\n",
-        "            logits = model(imgs.to(device))\n",
-        "        loss = criterion(logits, labels.to(device))\n",
-        "        acc = (logits.argmax(dim=-1) == labels.to(device)).float().mean()\n",
+        "            logits = model(imgs)\n",
+        "            loss = criterion(logits, labels)\n",
+        "\n",
+        "        acc = (logits.argmax(dim=-1) == labels).float().mean()\n",
         "\n",
         "        valid_loss_list.append(loss.item())\n",
         "        valid_acc_list.append(acc.item())\n",
         "\n",
         "    valid_loss = sum(valid_loss_list) / len(valid_loss_list)\n",
         "    valid_acc = sum(valid_acc_list) / len(valid_acc_list)\n",
-        "    print(f\"[ Valid | {epoch + 1:03d}/{n_epochs:03d} ] loss = {valid_loss:.5f}, acc = {valid_acc:.5f}\")\n",
         "\n",
-        "    # ---------- 记录指标 ----------\n",
+        "    print(f\"[ Valid | {epoch+1:03d}/{n_epochs:03d} ] loss = {valid_loss:.5f}, acc = {valid_acc:.5f}\")\n",
+        "\n",
+        "    # ---------- 保存指标 ----------\n",
         "    train_losses.append(train_loss)\n",
         "    train_accs.append(train_acc)\n",
         "    valid_losses.append(valid_loss)\n",
         "    valid_accs.append(valid_acc)\n",
         "\n",
-        "    # ---------- 实时绘图 ----------\n",
-        "    axs[0].cla()\n",
-        "    axs[1].cla()\n",
         "\n",
-        "    # Loss 曲线\n",
-        "    axs[0].plot(train_losses, label='Train Loss')\n",
-        "    axs[0].plot(valid_losses, label='Valid Loss')\n",
-        "    axs[0].set_xlabel('Epoch')\n",
-        "    axs[0].set_ylabel('Loss')\n",
-        "    axs[0].legend()\n",
-        "    axs[0].set_title('Loss Curve')\n",
+        "# =====================================================\n",
+        "#                训练结束后统一画图\n",
+        "# =====================================================\n",
         "\n",
-        "    # Accuracy 曲线\n",
-        "    axs[1].plot(train_accs, label='Train Acc')\n",
-        "    axs[1].plot(valid_accs, label='Valid Acc')\n",
-        "    axs[1].set_xlabel('Epoch')\n",
-        "    axs[1].set_ylabel('Accuracy')\n",
-        "    axs[1].legend()\n",
-        "    axs[1].set_title('Accuracy Curve')\n",
+        "fig, axs = plt.subplots(1, 2, figsize=(12, 4))\n",
         "\n",
-        "    plt.pause(0.1)  # 刷新图形\n",
+        "# Loss 曲线\n",
+        "axs[0].plot(train_losses, label='Train Loss')\n",
+        "axs[0].plot(valid_losses, label='Valid Loss')\n",
+        "axs[0].set_xlabel('Epoch')\n",
+        "axs[0].set_ylabel('Loss')\n",
+        "axs[0].set_title('Loss Curve')\n",
+        "axs[0].legend()\n",
         "\n",
-        "# ---------- 训练结束显示最终曲线 ----------\n",
-        "plt.ioff()\n",
-        "plt.show()\n",
-        "plt.savefig(\"training_curve.png\")"
+        "# Accuracy 曲线\n",
+        "axs[1].plot(train_accs, label='Train Acc')\n",
+        "axs[1].plot(valid_accs, label='Valid Acc')\n",
+        "axs[1].set_xlabel('Epoch')\n",
+        "axs[1].set_ylabel('Accuracy')\n",
+        "axs[1].set_title('Accuracy Curve')\n",
+        "axs[1].legend()\n",
+        "\n",
+        "plt.tight_layout()\n",
+        "plt.savefig(\"training_curve.png\")   # 先保存\n",
+        "plt.show()                          # 再显示"
       ],
       "execution_count": 13,
       "outputs": [
